# pypreader-mcp

./: .gitignore  README.md  README_zh.md  pyproject.toml
assets/prompts/: trae.md
examples/: fastmcp_client.py  local_verify.py  uvx_verify.py
pypreader_mcp/: find_definition.py  find_symbol.py  server.py  utils.py
test/: test_server.py
