[project]
name = "pypreader-mcp"
version = "0.1.2"
description = "Python Package Reader MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.1",
    "requests>=2.32.4",
]

[project.entry-points.console_scripts]
pypreader-mcp = "pypreader_mcp.server:main"

[dependency-groups]
dev = [
    "i18n-readme",
    "pre-commit>=4.2.0",
]

[tool.setuptools.packages.find]
include = ["pypreader_mcp*"]
exclude = ["assets*"]

[tool.uv.sources]
i18n-readme = { git = "https://github.com/zakahan/i18n-readme" }
