[project]
name = "pypreader-mcp"
version = "0.1.2"
description = "Python Package Reader MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.1",
    "requests>=2.32.4",
]

[project.entry-points.console_scripts]
pypreader-mcp = "pypreader_mcp.server:main"

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "i18n-readme",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-tornasync>=0.6.0.post2",
]

[tool.setuptools.packages.find]
include = ["pypreader_mcp*"]
exclude = ["assets*"]

[tool.uv.sources]
i18n-readme = { git = "https://github.com/zakahan/i18n-readme" }
